WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23309
Chromium crashes with custom cursors
https://bugs.webkit.org/show_bug.cgi?id=23309
Summary
Chromium crashes with custom cursors
Ananta Iyengar
Reported
2009-01-13 16:47:57 PST
This is a chromium only issue. . Navigate Google maps 2. Scroll in/out, drag, move the mouse cursor in/out of the map area to change the custom cursor until problem appears 3. See Chromium Crash 4. Sigh :( This is a bug in the ImageSource::clear implementation in ImageSourceSkia.cpp. I will be submitting a patch shortly.
Attachments
Contains the fix for the custom cursor crash with Chromium
(8.62 KB, patch)
2009-01-13 17:38 PST
,
Ananta Iyengar
no flags
Details
Formatted Diff
Diff
Fix for the cursor crash with Chromium
(5.78 KB, patch)
2009-01-13 17:54 PST
,
Ananta Iyengar
eric
: review-
Details
Formatted Diff
Diff
Fix for the custom cursor crash with Chromium. Updated based on code review comments by Eric
(4.32 KB, patch)
2009-01-13 18:20 PST
,
Ananta Iyengar
no flags
Details
Formatted Diff
Diff
Updated patch created off the changelog this time.
(4.28 KB, patch)
2009-01-16 10:36 PST
,
Ananta Iyengar
eric
: review+
Details
Formatted Diff
Diff
Updated patch with the reviewer name fixed and tab removed.
(4.41 KB, patch)
2009-02-05 16:30 PST
,
Ananta Iyengar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Ananta Iyengar
Comment 1
2009-01-13 17:38:36 PST
Created
attachment 26699
[details]
Contains the fix for the custom cursor crash with Chromium
Ananta Iyengar
Comment 2
2009-01-13 17:41:34 PST
Comment on
attachment 26699
[details]
Contains the fix for the custom cursor crash with Chromium There are some unrelated changes in this patch. Will upload a new one shortly
Ananta Iyengar
Comment 3
2009-01-13 17:54:22 PST
Created
attachment 26700
[details]
Fix for the cursor crash with Chromium
Eric Seidel (no email)
Comment 4
2009-01-13 18:03:15 PST
Comment on
attachment 26700
[details]
Fix for the cursor crash with Chromium The ChangeList wrong. You you set EMAIL_ADDRESS in your local environment so future runs of prepare-ChangeLog know what your email address is (
iyengar@chromium.org
). Your REAL_NAME value should also be set to something other than "iyengar" (currently it's falling back onto your username). I would revert your local ChangeLog and run prepare-ChangeLog again (once and only once). You seem to have corrected setData to 8 spaces of indent from 6 spaces on all platforms except chromium. :)
Ananta Iyengar
Comment 5
2009-01-13 18:20:34 PST
Created
attachment 26702
[details]
Fix for the custom cursor crash with Chromium. Updated based on code review comments by Eric
Ananta Iyengar
Comment 6
2009-01-14 08:59:16 PST
I have uploaded a new patch which addresses these comments. Please take another look. -Ananta (In reply to
comment #4
)
> (From update of
attachment 26700
[details]
[review]) > The ChangeList wrong. You you set EMAIL_ADDRESS in your local environment so > future runs of prepare-ChangeLog know what your email address is > (
iyengar@chromium.org
). Your REAL_NAME value should also be set to something > other than "iyengar" (currently it's falling back onto your username). I would > revert your local ChangeLog and run prepare-ChangeLog again (once and only > once). > > You seem to have corrected setData to 8 spaces of indent from 6 spaces on all > platforms except chromium. :) >
Ananta Iyengar
Comment 7
2009-01-16 10:35:39 PST
Comment on
attachment 26702
[details]
Fix for the custom cursor crash with Chromium. Updated based on code review comments by Eric I had added comments by mistake to the diff directly. Will upload a new patch
Ananta Iyengar
Comment 8
2009-01-16 10:36:10 PST
Created
attachment 26800
[details]
Updated patch created off the changelog this time.
Holger Freyther
Comment 9
2009-02-03 03:41:25 PST
separate the style changes from the actual fix?
Eric Seidel (no email)
Comment 10
2009-02-05 14:26:29 PST
Comment on
attachment 26800
[details]
Updated patch created off the changelog this time. ChangeLog needs to be fix to Ananta's full name when landing. There is also a Tab in the changelog. Otherwise this looks fine.
Ananta Iyengar
Comment 11
2009-02-05 16:29:20 PST
Comment on
attachment 26800
[details]
Updated patch created off the changelog this time. Will update a new patch based on the comments by Eric.
Ananta Iyengar
Comment 12
2009-02-05 16:30:17 PST
Created
attachment 27369
[details]
Updated patch with the reviewer name fixed and tab removed.
Dimitri Glazkov (Google)
Comment 13
2009-02-06 10:09:42 PST
Landed as
http://trac.webkit.org/changeset/40722
.
Dimitri Glazkov (Google)
Comment 14
2009-02-06 10:10:10 PST
Comment on
attachment 27369
[details]
Updated patch with the reviewer name fixed and tab removed. Clearing review flag to remove from queue.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug