2009-02-06  Anantanarayanan Iyengar  <ananta@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23309
        Fix whitespace indent errors. The rest of the original patch has already
        landed.

        * platform/graphics/cairo/ImageSourceCairo.cpp:
        (WebCore::ImageSource::clear):
        * platform/graphics/cg/ImageSourceCG.cpp:
        (WebCore::ImageSource::clear):
        * platform/graphics/qt/ImageSourceQt.cpp:
        (WebCore::ImageSource::clear):
        * platform/graphics/wx/ImageSourceWx.cpp:
        (WebCore::ImageSource::clear):

Canonical link: https://commits.webkit.org/32861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40722 268f45cc-cd09-0410-ab3c-d52691b4dbfc